<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_alignParentTop="true"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/searchholder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/search_gradient"
            android:orientation="horizontal"
            android:paddingBottom="2dip"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="8dip">

        <EditText
                android:id="@+id/search_text"
                android:layout_width="0dip"
                android:layout_height="90px"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:hint="@string/search_hint"
                android:singleLine="true"
                android:textSize="19sp"/>

        <ImageButton
                android:id="@+id/barcode_button"
                android:layout_width="wrap_content"
                android:layout_height="90px"
                android:src="@drawable/ic_btn_barcode"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/patientholder"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical">

        <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

        <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/white"
                android:gravity="center"
                android:paddingLeft="17sp"
                android:paddingRight="17sp"
                android:text="@string/no_patients"
                android:textColor="@drawable/black"
                android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonholder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/download_patients"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:minHeight="90px"
                android:padding="12dp"
                android:text="@string/download_patients"
                android:textSize="16dp"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/display_patients"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:minHeight="90px"
                android:padding="12dp"
                android:text="@string/display_patients"
                android:textSize="16dp"/>
    </LinearLayout>

</LinearLayout>